<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="tDataFrame" Id="{d3e6aade-cdc2-48c1-bd68-2b961b20d2f4}">
    <Declaration><![CDATA[TYPE tDataFrame :
ARRAY[0..64] OF BYTE; // Normal Mode datagram
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>